# gramine

./: .gitignore  meson.build  meson_options.txt
CI-Examples/cndp-helloworld/: Makefile  helloworld  helloworld.manifest.template
CI-Examples/socket-types-profiler/: .gitignore  README.md  run-tests.bash
CI-Examples/socket-types-profiler/src/: Makefile  perf-client.c  perf-client.h  perf-common.c  perf-common.h  perf-inet-client.c  perf-inet-client.h  perf-inet-server.c  perf-inet-server.h  perf-server.c  perf-server.h  perf-unix-client.c  perf-unix-client.h  perf-unix-server.c  perf-unix-server.h  perf-xdp-client.c  perf-xdp-client.h  perf-xdp-common.c  perf-xdp-common.h  perf-xdp-loader.c  perf-xdp-server.c  perf-xdp-server.h  perf.manifest.template
LibOS/shim/include/: shim_socket.h
LibOS/shim/src/: meson.build
LibOS/shim/src/fs/socket/: fs.c
LibOS/shim/src/net/: xdp.c
LibOS/shim/src/sys/: shim_ioctl.c  shim_mmap.c  shim_socket.c
Pal/include/pal/: pal.h
Pal/src/: db_memory.c
Pal/src/host/Linux/: db_sockets.c  meson.build
Pal/src/host/Linux-SGX/: db_sockets.c  enclave_ocalls.c  enclave_ocalls.h  linux_types.h  meson.build  ocall_types.h  sgx_enclave.c
common/include/: linux_socket.h
common/src/: socket_utils.c
subprojects/: .gitignore  xdp-tools-1.2.3.wrap
subprojects/packagefiles/xdp-tools/: compile.sh  meson.build  v.patch
